Adding the specs.  Trying out running tests.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "jessie": "latest",
-    "jsdom": "latest"
+    "jsdom": "latest",
+    "glob": "latest"
   }
 }
