--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "jquery" : "*",
     "underscore" : "*" 
   },
+  "devDependencies" : {
+    "mocha" : "*",
+    "should" : "*",
+    "jsdom" : "*",
+    "html5" : "*"
+  },
+  "scripts" : {
+   "test" : "mocha"
+  },
+
   "main" : "./src/index.js",
   "directories" : {"lib": "src"}
 }
