Setup for continuous integration with travis-ci

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mocha" : "*",
     "should" : "*",
     "jsdom" : "*",
-    "html5" : "*"
+    "html5" : "*",
+    "sinon" : "*"
   },
   "scripts" : {
    "test" : "mocha"
