Add canvas as a dev dependency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "should" : "*",
     "jsdom" : "*",
     "html5" : "*",
-    "sinon" : "*"
+    "sinon" : "*",
+    "canvas" : "*"
   },
   "scripts" : {
    "test" : "mocha -R spec"
