Add the run specs script so that I can traverse directories

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "canvas" : "*"
   },
   "scripts" : {
-   "test" : "mocha -R spec"
+   "test" : "./run_specs"
   },
 
   "main" : "./src/index.js",
